--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "nodemon index.js"
+    "server": "nodemon app.js"
   },
   "keywords": [],
   "author": "Gaston Marino",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.3",
+    "express": "4.17.3",
     "nodemon": "^2.0.15"
   }
 }
